//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  name String
  email String [unique]
  image String
  nailSets NailSet [not null]
  baseCoats BaseCoat [not null]
  topCoats TopCoat [not null]
  artNails ArtNail [not null]
  colorNails ColorNail [not null]
  admin Boolean [not null, default: false]
  createdAt DateTime [default: `now()`, not null]
}

Table BaseCoat {
  id String [pk]
  name String [not null]
  brand String [not null]
  image String [not null]
  nails Nail [not null]
  User User [not null]
}

Table TopCoat {
  id String [pk]
  name String [not null]
  brand String [not null]
  image String [not null]
  nails Nail [not null]
  User User [not null]
}

Table ArtNail {
  id String [pk]
  genre String [not null]
  name String [not null]
  brand String [not null]
  image String [not null]
  nails Nail [not null]
  User User [not null]
}

Table ColorNail {
  id String [pk]
  genre String [not null]
  name String [not null]
  brand String [not null]
  image String [not null]
  nails Nail [not null]
  User User [not null]
}

Table Nail {
  id String [pk]
  finger String [not null]
  baseId String [not null]
  base BaseCoat [not null]
  colorId String [not null]
  color ColorNail [not null]
  artId String [not null]
  art ArtNail [not null]
  topId String [not null]
  top TopCoat [not null]
  setId String [not null]
  nailSet NailSet [not null]
}

Table NailSet {
  id String [pk]
  title String [not null]
  image String [not null]
  base String [not null]
  userId String [not null]
  user User [not null]
  nails Nail [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table BaseCoatToUser {
  basecoatsId String [ref: > BaseCoat.id]
  userId String [ref: > User.id]
}

Table TopCoatToUser {
  topcoatsId String [ref: > TopCoat.id]
  userId String [ref: > User.id]
}

Table ArtNailToUser {
  artnailsId String [ref: > ArtNail.id]
  userId String [ref: > User.id]
}

Table ColorNailToUser {
  colornailsId String [ref: > ColorNail.id]
  userId String [ref: > User.id]
}

Ref: Nail.baseId > BaseCoat.id

Ref: Nail.colorId > ColorNail.id

Ref: Nail.artId > ArtNail.id

Ref: Nail.topId > TopCoat.id

Ref: Nail.setId > NailSet.id [delete: Cascade]

Ref: NailSet.userId > User.id [delete: Cascade]